fix Awart page colapse on mobile

--- a/src/app/layout-pages/awards/awards.component.scss
+++ b/src/app/layout-pages/awards/awards.component.scss
@@ -20,6 +20,7 @@
     padding: 0.5rem;
     .image-content {
         margin: 1rem;
+        //overflow-y: scroll;
     }
     .img-responsive {
         display: block;
@@ -27,10 +28,17 @@
         height: 100%;
         float: left;
         border: 1px solid blue;        
-        margin: 1rem;
+        border-radius: 10px;
     }
     .label-title {
         font-weight: bold;
         font-style: italic;
     }    
+    .image-content ul {
+        max-height: calc(100vh - 150px);
+        overflow-y: auto;
+        padding: 0; /* Optional: Adjust padding */
+        margin: 0; /* Optional: Adjust margin */
+        list-style-type: none; /* Optional: Remove default list styling */
+    }
 }
